# deurbel

./: .gitignore  Cargo.toml  README.md
PCB/deurbel/: Customs.bak  Customs.kicad_sym  Powersupply.kicad_sch  deurbel.kicad_pcb  deurbel.kicad_prl  deurbel.kicad_pro  deurbel.kicad_sch
PCB/deurbel/Customs.pretty/: ESP32-WROOM-32.kicad_mod  Level Shifter.kicad_mod  Naamloos.kicad_mod
src/: CMakeLists.txt  global.rs  main.rs
src/discord/: mod.rs
src/gong/: mod.rs
