[package]
edition = "2021"
name    = "deurbel"
version = "0.1.0"

[[bin]]
name = "deurbel"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = "0.1.0"
esp-hal = { version = "1.0.0-beta.1", features = [
  "esp32",
  "log-04",
  "unstable",
] }
log = "0.4.27"

critical-section = "1.2.0"
embedded-io = "0.6.1"
esp-alloc = "0.8.0"
esp-println = { version = "0.14.0", features = ["esp32", "log-04"] }
esp-wifi = { version = "0.14.1", features = [
  "builtin-scheduler",
  "esp-alloc",
  "esp32",
  "log-04",
  "smoltcp",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
embassy-net = { version = "0.7.0", features = ["tcp", "dhcpv4", "dhcpv4-hostname"]}
embassy-time = { version = "0.4.0" }
embassy-executor = { version = "0.7.0", features = ["nightly"]}
reqwless = { version = "0.13.0", default-features = false }
heapless = { version = "0.8.0", default-features = false }
static_cell = "2.1.1"
esp-hal-embassy = { version = "0.8.1", features = ["esp32"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
